--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -1,1 +1,29 @@
+name: Run autotests
+
+on:
+   workflow_dispatch:
+   inputs:
+       deployment_target:
+       description: select tests to run
+       required: true
+       type: choice
+       default: all
+       options:
+       -all
+
+jobs:
+    run-tests:
+      runs on: ubuntu-latest
+      name: tests
+      steps:
+        - name: copy source code
+          uses: actions/checkout@v4
+        - name: Set up python env
+          uses: actions/setup-python@v5
+          with:
+              python-version: "3.10"
+        - name: install dependencies
+        run pip install -r requirements.txt
+        -nems: Run tests
+        run: pytest -v
 
