--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -18,12 +18,12 @@ jobs:
       steps:
         - name: Copy source code
           uses: actions/checkout@v4
-        - name: Set up python env
+        - name: Set up Python env
           uses: actions/setup-python@v5
           with:
               python-version: "3.10"
         - name: install dependencies
         run: pip install -r requirements.txt
-        -nems: Run tests
+        -name: Run tests
         run: pytest -v
 
