--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -26,13 +26,13 @@ jobs:
         with:
           python-version: "3.13"
 
-      - name: Install pytest and dependencies
+      - name: Install dependencies
         run: |
           pip install --upgrade pip
-          pip install pytest
-          pip install selenium
-          pip install requests  # если используется
-          pip install allure-pytest  # для Allure, если нужно
+          pip install pytest selenium allure-pytest webdriver-manager
+
+      - name: Show installed packages
+        run: pip list
 
       - name: Run tests
         run: |
