--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -29,11 +29,10 @@ jobs:
       - name: Install dependencies
         run: |
           pip install --upgrade pip
-          pip install pytest selenium allure-pytest webdriver-manager
+          pip install -r requirements.txt
 
       - name: Show installed packages
         run: pip list
 
       - name: Run tests
-        run: |
-          pytest -v
+        run: pytest -v
